# avr-boy-emulator

./: .clang-format  .cmake-format.json  .gitignore  .gitmodules  CMakeLists.txt
app/: CMakeLists.txt  avr_boy_emulator.cpp  avr_boy_emulator.hpp  graphx_loop.cpp  main.cpp
demo/: CMakeLists.txt  ball.cpp  main.cpp
include/avr-boy-emulator/: communicator.hpp  communicator_pipe.hpp  fifo_pipe.hpp
src/: CMakeLists.txt  communicator_pipe.cpp  fifo_pipe.cpp
src/cartridge_demo/: CMakeLists.txt  ball.hpp  main.cpp
src/handheld_emulator/: CMakeLists.txt  handheld_emulator.cpp  handheld_emulator.hpp  main.cpp
test/: CMakeLists.txt  fifo_pipe_test.cpp
